@@ -1,3 +1,12 @@
+2012-02-10  Vanessa Gil  <vanessa.gil@artica.es>
+	* pandoradb.sql
+	  pandoradb.postgreSQL.sql
+	  pandoradb.oracle.sql
+	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
+	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
+	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Changed type of 'value'
+	to tconfig table.
+
 2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>
 
         * include/functions_modules.php: Changed module status image for unknown
